# atm_application

backend/: app.js  db.js  package-lock.json  package.json  verifyToken.js
backend/models/: account_model.js  card_model.js  customers_model.js  transactions_model.js
backend/routes/: accounts.js  cards.js  customers.js  transactions.js
documentaatio/: Ohjelmistotuotannon_kysymyspatteri.docx  projektisuunnitelma.docx  tekninen_maarittely.docx
frontend/bank_automat/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
